deploy/kustomize/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo-service
spec:
  selector:
    deployment: quarkus-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
