deploy/kustomize/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo-route
spec:
  to:
    kind: Service
    name: quarkus-demo-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
